package com.designpatterns.creational.factory.VehicleFactory;

public interface Vehicle {
	public void getCCofEngine();
	public void getModel();
	public void getFuelCapacity();
}
