package com.designpatterns.creational.factory.VehicleFactory;

public enum VehicleType {
	CAR,
	BUS,
	TRUCK,
	VAN
}
